# GHProfScanner

./: .gitignore  README.md  inspect_report.py  pyproject.toml  tmp_run.py
.github/: copilot-instructions.md
config/: settings.yaml
github_scanner/: __init__.py  cli.py  config.py  github_api.py  llm.py  models.py  report.py  scraper.py
github_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py
