[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-scanner"
version = "0.1.0"
description = "CLI tool to analyze a GitHub profile, aggregate repository metrics and documentation, and generate an LLM-powered summary report."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "PyYAML>=6.0",
  "tenacity>=8.2"
]

[project.optional-dependencies]
llm = [
  "openai>=1.12.0"
]

[project.scripts]
github-scanner = "github_scanner.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["github_scanner*"]
